# learning-Fast-DDS

./: build_debug.sh  testFastDDS.xml
Memory_Pool/: Alloctor.h  CMakeLists.txt  MemoryMgr.hpp  build_x86.sh  main.cpp
TestCustomPlot/: TestCustomPlot.pro  TestCustomPlot.pro.user.1e69adc  main.cpp  mainwindow.cpp  mainwindow.h  qcustomplot.cpp  simpleplot.cpp  simpleplot.h  widget.cpp  widget.h
examples/cpp/dds/: CMakeLists.txt
examples/cpp/dds/HelloStudent/: Subscriber.cpp  Subscriber.h
examples/cpp/dds/HelloTest/: Publisher.h  Subscriber.h
src/cpp/fastdds/publisher/: PublisherImpl.cpp
